--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ section {
   display: flex;
   align-items: center;
   padding: 0 9%;
-  background: url(imgs/back.png) no-repeat;
+  background: url(imgs/newbggg.png) no-repeat;
   background-size: cover;
   background-position: center;
 }
