--- a/style.css
+++ b/style.css
@@ -692,3 +692,27 @@ span {
     transform: translate(-50%, -50%) rotate(360deg);
   }
 }
+
+@media (max-width: 600px) {
+  .home {
+    display: flex;
+    align-items: center;
+    padding: 0 4%;
+    background: url(imgs/newbggg.png) no-repeat;
+    background-size: cover;
+    background-position: 70%;
+  }
+  .home-imghover {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 0%;
+    height: 0%;
+    background: transparent;
+    transition: 3s ease;
+  }
+  .home-imghover:hover {
+    background: var(--bgcolor);
+    opacity: 0.5;
+  }
+}
